--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,6 @@
    </head>
    <body>
       <h1 style="text-align:center;">Welcome To Little Lemon Restaurant</h1>
-      <img src="{% static 'restaurant/mazzarin_logo.png' %}">
+      <img src="{% static 'restaurant/logo.png' %}">
    </body>
 </html>
