twelfth commit - templates modification; scripts folder and pipfile.lock deletion from inside project

--- a/restaurant/templates/about.html
+++ b/restaurant/templates/about.html
@@ -7,8 +7,8 @@
       <!--Begin col-->
       <div class="column">
         <p>
-          Little Lemon is a website project created by Gabriel Mazer to demonstrate his web development skills.
-          The site simulates a Mediterranean cuisine restaurant, with traditional recipes and a modern twist.
+          Mazzarin is a website project created by Gabriel Mazer to demonstrate his web development skills.
+          The site simulates a vegan restaurant, with traditional recipes and a modern twist.
         </p>
         <p>
           The project involved the creation of a reservation and booking API, using Python, Django,
@@ -16,8 +16,8 @@
         </p>
 
         <p>
-          Little Lemon is a fictional example of a restaurant and 
-          on the “Reservations” tab, you can see all the reservations in JSON format that were made from the “Book” tab.
+          You are more than welcome to explore this website.
+          In the “Reservations” tab, you can see all the reservations in JSON format that were made from the “Book” tab.
         </p>
 
         <p>
@@ -31,11 +31,11 @@
       <div class="column">
         <figure class="figure">
           <img
-            src="{% static 'img/gab-mazer.jpg' %}"
-            alt="Mario and Adrian"
+            src="{% static 'img/gabriel-mazer-final.png' %}"
+            alt="Gabriel Mazer"
           />
           <figcaption class="figure-caption">
-            Little Lemon creator Gabriel Mazer.
+            Mazzarin creator Gabriel Mazer.
           </figcaption>
         </figure>
       </div>
