--- a/restaurant/templates/index.html
+++ b/restaurant/templates/index.html
@@ -8,7 +8,7 @@
       <p>
         30% Off This Weekend 
       </p>
-      <a href="#" class="cta"> Book now </a>
+      <a href="book" class="cta"> Book now </a>
     </article>
   </section>
   <section>
@@ -24,7 +24,7 @@
     </article>
     <article>
       <h2>Book a table</h2>
-      <img src="{% static 'img/salad.jpg' %}">
+      <img src="{% static 'img/Tofu Salad.jpg' %}">
       <p>
         Reserve your table for an Italian, Greek, and Turkish dining experience.
       </p>
