--- a/restaurant/templates/partials/_footer.html
+++ b/restaurant/templates/partials/_footer.html
@@ -1,9 +1,11 @@
 {% load static %}
 <footer>
   <article>
-    <img src="{% static 'img/logo_footer.png' %}" />
+    <img src="{% static 'img/logo_footer2.png' %}" />
   </article>
   <article>
-    <p>Copyright Little Lemon</p>
+    <p>
+      This project was created by Gabriel Mazer
+    </p>
   </article>
 </footer>
