--- a/restaurant/templates/partials/_header.html
+++ b/restaurant/templates/partials/_header.html
@@ -1,6 +1,6 @@
 {% load static %}
 <header>
-  <img src="{% static 'img/logo2.png' %}" />
+  <img src="{% static 'img/logo-final2 - Copia.png' %}" />
 </header>
 <nav>
   <ul>
