--- a/restaurant/static/css/style.css
+++ b/restaurant/static/css/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Karla', sans-serif;
-    margin-top: 3rem;
+    margin-top: 1rem;
     margin-bottom: 3rem;
     margin-left: 5%;
     margin-right: 5%;
@@ -9,7 +9,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Markazi Text', serif;
-    letter-spacing: 2px;;
+    letter-spacing: 2px;
 }
 
 h1 {
@@ -41,7 +41,7 @@ header img {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    max-width: 100%;
+    max-width: 15%;
     height: auto;
 }
 
@@ -93,7 +93,7 @@ article {
 }
 
 article img {
-    max-width: 100%;
+    max-width: 50%;
 }
 
 article ul {
