--- a/restaurant/templates/base.html
+++ b/restaurant/templates/base.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Little Lemon</title>
+    <title>Mazzarin</title>
     <meta name="description" content="A brief description" />
     <meta
       name="author"
