--- a/restaurant/templates/menu_item.html
+++ b/restaurant/templates/menu_item.html
@@ -14,7 +14,7 @@
          <!--Begin col-->
          <div class="column">
             <h2>
-                {{ menu_item.name }}
+                {{ menu_item.title }}
             </h2>
             <p>
                 {{ menu_item.menu_item_description }}
@@ -26,7 +26,7 @@
          <!--End col-->
          <!--Begin col-->
          <div class="column">
-            <img src="/Final Assessment/littlelemon/restaurant/static/img/{{menu_item.name}}.jpg" alt="{{ menu_item.name}}" />
+            <img src="{% static 'img/'|add:menu_item.title|add:'.jpg' %}" alt="{{ menu_item.title }}" />
         </div>
          <!--End col-->
       </div>
