--- a/restaurant/templates/about.html
+++ b/restaurant/templates/about.html
@@ -25,19 +25,9 @@
           There, you will not be able to make reservations at the same time and you can see all the reservations for that specific day.
         </p>
       </div>
-      <!--End col-->
-
-      <!--Begin col-->
       <div class="column">
-        <figure class="figure">
-          <img
-            src="{% static 'img/gabriel-mazer-final.png' %}"
-            alt="Gabriel Mazer"
-          />
-          <figcaption class="figure-caption">
-            Mazzarin creator Gabriel Mazer.
-          </figcaption>
-        </figure>
+        <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
+        <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="light" data-type="HORIZONTAL" data-vanity="gabrielmazer" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://br.linkedin.com/in/gabrielmazer?trk=profile-badge"></a></div>
       </div>
       <!--End col-->
     </div>
